# ArgonAgent

./: .gitignore  AGENTS.md  Cargo.toml  EXPORT_MANIFEST.md  LICENSE  README.md
crates/runtime/: Cargo.toml
crates/runtime/src/: agent_loop_driver.rs  agent_team.rs  approval_queue.rs  artifact.rs  command.rs  compaction.rs  compatible_provider.rs  context_budget.rs  context_builder.rs  context_policy.rs  error_recovery.rs  event_invariants.rs  event_log.rs  executor.rs  file_tool.rs  git_tool.rs  harness.rs  hook_dispatcher.rs  lib.rs  live_http_transport.rs  live_model_executor.rs  live_model_request.rs  local_api_server.rs  model_adapter.rs  model_router.rs  model_transcript.rs  multi_agent_policy.rs  native_agent_loop.rs  native_agent_loop_completion.rs  native_agent_loop_continuation.rs  native_agent_loop_entrypoints.rs  native_agent_loop_execution.rs  native_agent_loop_fixtures.rs  native_agent_loop_model_io.rs  native_agent_loop_prompt.rs  native_agent_loop_resume.rs  native_agent_loop_tests.rs  native_agent_loop_tools.rs  native_agent_loop_util.rs  native_provider.rs  (+32 more)
crates/runtime/src/agent_kernel/: budget_policy.rs  compactor.rs  context_spine.rs  convergence_enforcer.rs  conversation_history.rs  evidence_ledger.rs  kernel.rs  mod.rs  observation_cache.rs  permission_gate.rs  permission_policy.rs  provider_capability.rs  telemetry.rs  tool_inventory.rs  turn_controller.rs  (+3 more)
crates/runtime/tests/: facade_contract.rs
desktop/src-tauri/: Cargo.toml  README.md  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
(+349 files in other folders)
