[package]
name = "researchcode-runtime"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
researchcode-kernel = { path = "../kernel" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
tokio-util = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
futures = "0.3"
eventsource-stream = "0.2"

[lib]
path = "src/lib.rs"
