[package]
name = "researchcode-desktop-host"
version = "0.1.0"
edition = "2021"
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
researchcode-kernel = { path = "../../crates/kernel" }
researchcode-runtime = { path = "../../crates/runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
rfd = "0.14"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[workspace]
